--- a/htmlCSS4/index.html
+++ b/htmlCSS4/index.html
@@ -12,8 +12,8 @@
     <p>
       div bir blok etiketidir ve bir kutu gibi dusunulebilir. HTML elemanlarini
       tasiyan bir konteyner gibi dusunulebilir. Blok etiketler etiketleri
-      asagiya indirir. Inlive dedigimiz sey cursor'u bulundugu yerden devam
-      ettirir
+      asagiya indirir yani br yapmaya gerek yoktur.. Inlive dedigimiz sey
+      cursor'u bulundugu yerden devam ettirir
     </p>
 
     <div class="kutu ust">
@@ -59,6 +59,30 @@
         from a line in section 1.10.32.
       </p>
     </div>
+
+    <div class="kutu1 sari">Sari</div>
+    <div class="kutu1 yesil">Yesil</div>
+    <div class="kutu1 kirmizi">Kirmizi</div>
+    <div class="kutu1 mavi">Mavi</div>
+    <div class="clearfix"></div>
+    <div class="kutu1 mor">MOR</div>
+
+    <!-- 
+      Kisayol ile div olusturma
+      div.kutu>div.alt*10 yazip enter a basinca asagidaki gibi olur. opsiyoneldir.
+      
+      <div class="kutu">
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+      <div class="alt"></div>
+    </div> -->
 
     <!--
     <div>
