--- a/boostrap/ornek5_resimButon/index.html
+++ b/boostrap/ornek5_resimButon/index.html
@@ -44,6 +44,23 @@
       </div>
     </div>
 
+    <div class="container mt-4">
+      <button class="btn btn-outline-warning">TIKLA</button>
+      <button class="btn btn-danger">SIL</button>
+      <button class="btn btn-success">GÖNDER</button>
+      <button
+        type="button"
+        class="btn btn-outline-primary btn-lg d-block w-100 mt-4"
+      >
+        KAYDET
+      </button>
+
+      <!-- buttonlar inline dir  ve bundan öturu yanyana yapar asagiya indirmek icin d-block kullanilabilir baska bir suru yolu daha  vardir
+      w-100 ==> dersek buton tum container i kaplar % olarak dusunulebilir w-50 dese idik yarisi olacaktir
+      
+      -->
+    </div>
+
     <script src="js/bootstrap.bundle.js"></script>
   </body>
 </html>
